core code updates - JDK logging local configuration
git-svn-id: http://svn.code.sf.net/p/hsqldb/svn/base/trunk@6568 7c7dc5f5-a22d-0410-a3af-b41755a11667

--- a/src/org/hsqldb/resources/jdklogging-default.properties
+++ b/src/org/hsqldb/resources/jdklogging-default.properties
@@ -19,9 +19,9 @@
 handlers=java.util.logging.ConsoleHandler
 .level=ALL
 
-org.hsqldb.lib.HsqlConsoleHandler.level=WARNING
-#for testing, comment out line above and uncomment line below
-#org.hsqldb.lib.HsqlConsoleHandler.level=INFO
+#org.hsqldb.lib.HsqlConsoleHandler.level=WARNING
+#uncomment line above and comment out line below for old distro behaviour
+org.hsqldb.lib.HsqlConsoleHandler.level=INFO
 org.hsqldb.lib.HsqlConsoleHandler.formatter=org.hsqldb.lib.BasicTextJdkLogFormatter
 
 hsqldb.db.handlers=org.hsqldb.lib.HsqlConsoleHandler
