--- a/trunk/src/org/hsqldb/resources/jdklogging-default.properties
+++ b/trunk/src/org/hsqldb/resources/jdklogging-default.properties
@@ -19,18 +19,22 @@
 handlers=java.util.logging.ConsoleHandler
 .level=ALL
 
-org.hsqldb.lib.HsqlConsoleHandler.level=WARNING
+java.util.logging.ConsoleHandler.level=WARNING
+java.util.logging.ConsoleHandler.formatter=org.hsqldb.lib.BasicTextJdkLogFormatter
+
+# for use of custom ConsoleHandler uncomment below and comment out above two lines
+#org.hsqldb.lib.HsqlConsoleHandler.level=WARNING
 #for testing, comment out line above and uncomment line below
 #org.hsqldb.lib.HsqlConsoleHandler.level=INFO
-org.hsqldb.lib.HsqlConsoleHandler.formatter=org.hsqldb.lib.BasicTextJdkLogFormatter
+#org.hsqldb.lib.HsqlConsoleHandler.formatter=org.hsqldb.lib.BasicTextJdkLogFormatter
 
-hsqldb.db.handlers=org.hsqldb.lib.HsqlConsoleHandler
-hsqldb.db.useParentHandlers=false
-org.hsqldb.auth.handlers=org.hsqldb.lib.HsqlConsoleHandler
-org.hsqldb.auth.useParentHandlers=false
-org.hsqldb.lib.FileUtil.handlers=org.hsqldb.lib.HsqlConsoleHandler
-org.hsqldb.lib.FileUtil.useParentHandlers=false
-#add similar lines here as framework logger adds logging in other places.
+#hsqldb.db.handlers=org.hsqldb.lib.HsqlConsoleHandler
+#hsqldb.db.useParentHandlers=false
+#org.hsqldb.auth.handlers=org.hsqldb.lib.HsqlConsoleHandler
+#org.hsqldb.auth.useParentHandlers=false
+#org.hsqldb.lib.FileUtil.handlers=org.hsqldb.lib.HsqlConsoleHandler
+#org.hsqldb.lib.FileUtil.useParentHandlers=false
+
 #java.util.logging.FileHandler.pattern=hsqldb.applog
 #java.util.logging.FileHandler.limit=50000
 #java.util.logging.FileHandler.count=1
