--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -3,9 +3,8 @@
 name: Sync
 
 # Controls when the workflow will run
-on:
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+on: workflow_dispatch
+# Allows you to run this workflow manually from the Actions tab
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
