--- a/trunk/test-src/org/hsqldb/resources/test.properties
+++ b/trunk/test-src/org/hsqldb/resources/test.properties
@@ -17,7 +17,7 @@ hsqldb.test.suite.print.test.warning=true
 hsqldb.test.suite.print.test.exceptions=true
 
 # enable/disable failing stubbed test cases
-hsqldb.test.suite.fail.stubbed.testcase=true
+hsqldb.test.suite.fail.stubbed.testcase=false
 
 # enable/disable closing or holding open embedded database across tests
 hsqldb.test.suite.close.embedded.databases.on.teardown=true
@@ -50,6 +50,9 @@ hsqldb.test.suite.test.types.sqlxml=false
 
 # enable/disable typemap-related testing
 hsqldb.test.suite.test.typemap=false
+
+# very long running test
+hsqldb.test.suite.test.value.pool.integer.hashmap=false
 
 # enable/disable various optional tests
 # use form ${suite.name}.test.${class.fqn} = true | false
@@ -111,16 +114,16 @@ hsqldb.test.suite.dbmd.catalog.separator=.
 hsqldb.test.suite.dbmd.catalog.term=CATALOG
 #Use this solely as the minimum version for Java 8 compatibility
 hsqldb.test.suite.dbmd.database.major.version=2
-hsqldb.test.suite.dbmd.database.minor.version=6
+hsqldb.test.suite.dbmd.database.minor.version=7
 hsqldb.test.suite.dbmd.database.product.name=HSQL Database Engine
-hsqldb.test.suite.dbmd.database.product.version=2.6.2
+hsqldb.test.suite.dbmd.database.product.version=2.7.0
 #
 hsqldb.test.suite.dbmd.default.transaction.isolation=2
 #Use this solely as the minimum version for Java 8 compatibility
 hsqldb.test.suite.dbmd.driver.major.version=2
-hsqldb.test.suite.dbmd.driver.minor.version=6
+hsqldb.test.suite.dbmd.driver.minor.version=7
 hsqldb.test.suite.dbmd.driver.name=HSQL Database Engine Driver
-hsqldb.test.suite.dbmd.driver.version=2.6.2
+hsqldb.test.suite.dbmd.driver.version=2.7.0
 hsqldb.test.suite.driver.jdbc.compliant=true
 #
 hsqldb.test.suite.dbmd.extra.name.characters=
@@ -368,10 +371,12 @@ select  id              as id_column,\n\
         c_varchar       as varchar_column,\n\
         c_blob          as blob_column,\n\
         c_clob          as clob_column,\n\
-        c_array         as array_column\n\
+        c_array         as array_column,\n\
+        c_bit_1         as bit_1_column,\n\
+        c_bit_8         as bit_8_column\n\
 from    all_types;
 #
-hsqldb.test.suite.rsmd.column.count=23
+hsqldb.test.suite.rsmd.column.count=25
 #
 hsqldb.test.suite.rsmd.catalog.name.1=PUBLIC
 hsqldb.test.suite.rsmd.catalog.name.2=PUBLIC
@@ -396,6 +401,8 @@ hsqldb.test.suite.rsmd.catalog.name.20=PUBLIC
 hsqldb.test.suite.rsmd.catalog.name.21=PUBLIC
 hsqldb.test.suite.rsmd.catalog.name.22=PUBLIC
 hsqldb.test.suite.rsmd.catalog.name.23=PUBLIC
+hsqldb.test.suite.rsmd.catalog.name.24=PUBLIC
+hsqldb.test.suite.rsmd.catalog.name.25=PUBLIC
 #
 hsqldb.test.suite.rsmd.column.label.1=id_column
 hsqldb.test.suite.rsmd.column.label.2=bigint_column
@@ -420,6 +427,8 @@ hsqldb.test.suite.rsmd.column.label.20=varchar_column
 hsqldb.test.suite.rsmd.column.label.21=blob_column
 hsqldb.test.suite.rsmd.column.label.22=clob_column
 hsqldb.test.suite.rsmd.column.label.23=array_column
+hsqldb.test.suite.rsmd.column.label.24=bit_1_column
+hsqldb.test.suite.rsmd.column.label.25=bit_8_column
 #
 hsqldb.test.suite.rsmd.column.name.1=id
 hsqldb.test.suite.rsmd.column.name.2=c_bigint
@@ -444,6 +453,8 @@ hsqldb.test.suite.rsmd.column.name.20=c_varchar
 hsqldb.test.suite.rsmd.column.name.21=c_blob
 hsqldb.test.suite.rsmd.column.name.22=c_clob
 hsqldb.test.suite.rsmd.column.name.23=c_array
+hsqldb.test.suite.rsmd.column.name.24=c_bit_1
+hsqldb.test.suite.rsmd.column.name.25=c_bit_8
 #
 hsqldb.test.suite.rsmd.column.class.name.1=java.lang.Integer
 hsqldb.test.suite.rsmd.column.class.name.2=java.lang.Long
@@ -468,6 +479,8 @@ hsqldb.test.suite.rsmd.column.class.name.20=java.lang.String
 hsqldb.test.suite.rsmd.column.class.name.21=java.sql.Blob
 hsqldb.test.suite.rsmd.column.class.name.22=java.sql.Clob
 hsqldb.test.suite.rsmd.column.class.name.23=java.sql.Array
+hsqldb.test.suite.rsmd.column.class.name.24=[B
+hsqldb.test.suite.rsmd.column.class.name.25=[B
 #
 hsqldb.test.suite.rsmd.column.type.1=java.sql.Types.INTEGER
 hsqldb.test.suite.rsmd.column.type.2=java.sql.Types.BIGINT
@@ -492,6 +505,8 @@ hsqldb.test.suite.rsmd.column.type.20=java.sql.Types.VARCHAR
 hsqldb.test.suite.rsmd.column.type.21=java.sql.Types.BLOB
 hsqldb.test.suite.rsmd.column.type.22=java.sql.Types.CLOB
 hsqldb.test.suite.rsmd.column.type.23=java.sql.Types.ARRAY
+hsqldb.test.suite.rsmd.column.type.24=java.sql.Types.BIT
+hsqldb.test.suite.rsmd.column.type.25=java.sql.Types.BIT
 #
 hsqldb.test.suite.rsmd.column.type.name.1=INTEGER
 hsqldb.test.suite.rsmd.column.type.name.2=BIGINT
@@ -516,6 +531,8 @@ hsqldb.test.suite.rsmd.column.type.name.20=VARCHAR
 hsqldb.test.suite.rsmd.column.type.name.21=BLOB
 hsqldb.test.suite.rsmd.column.type.name.22=CLOB
 hsqldb.test.suite.rsmd.column.type.name.23=INTEGER ARRAY[4]
+hsqldb.test.suite.rsmd.column.type.name.24=BIT
+hsqldb.test.suite.rsmd.column.type.name.25=BIT VARYING
 #
 hsqldb.test.suite.rsmd.display.size.1=11
 hsqldb.test.suite.rsmd.display.size.2=20
@@ -540,6 +557,8 @@ hsqldb.test.suite.rsmd.display.size.20=255
 hsqldb.test.suite.rsmd.display.size.21=16
 hsqldb.test.suite.rsmd.display.size.22=16
 hsqldb.test.suite.rsmd.display.size.23=55
+hsqldb.test.suite.rsmd.display.size.24=1
+hsqldb.test.suite.rsmd.display.size.25=8
 #
 hsqldb.test.suite.rsmd.precision.1=32
 hsqldb.test.suite.rsmd.precision.2=64
@@ -564,6 +583,8 @@ hsqldb.test.suite.rsmd.precision.20=255
 hsqldb.test.suite.rsmd.precision.21=16
 hsqldb.test.suite.rsmd.precision.22=16
 hsqldb.test.suite.rsmd.precision.23=0
+hsqldb.test.suite.rsmd.precision.24=1
+hsqldb.test.suite.rsmd.precision.25=8
 #
 hsqldb.test.suite.rsmd.scale.1=0
 hsqldb.test.suite.rsmd.scale.2=0
@@ -588,6 +609,8 @@ hsqldb.test.suite.rsmd.scale.20=0
 hsqldb.test.suite.rsmd.scale.21=0
 hsqldb.test.suite.rsmd.scale.22=0
 hsqldb.test.suite.rsmd.scale.23=0
+hsqldb.test.suite.rsmd.scale.24=0
+hsqldb.test.suite.rsmd.scale.25=0
 #
 hsqldb.test.suite.rsmd.schema.name.1=PUBLIC
 hsqldb.test.suite.rsmd.schema.name.2=PUBLIC
@@ -612,6 +635,8 @@ hsqldb.test.suite.rsmd.schema.name.20=PUBLIC
 hsqldb.test.suite.rsmd.schema.name.21=PUBLIC
 hsqldb.test.suite.rsmd.schema.name.22=PUBLIC
 hsqldb.test.suite.rsmd.schema.name.23=PUBLIC
+hsqldb.test.suite.rsmd.schema.name.24=PUBLIC
+hsqldb.test.suite.rsmd.schema.name.25=PUBLIC
 #
 hsqldb.test.suite.rsmd.table.name.1=ALL_TYPES
 hsqldb.test.suite.rsmd.table.name.2=ALL_TYPES
@@ -636,6 +661,8 @@ hsqldb.test.suite.rsmd.table.name.20=ALL_TYPES
 hsqldb.test.suite.rsmd.table.name.21=ALL_TYPES
 hsqldb.test.suite.rsmd.table.name.22=ALL_TYPES
 hsqldb.test.suite.rsmd.table.name.23=ALL_TYPES
+hsqldb.test.suite.rsmd.table.name.24=ALL_TYPES
+hsqldb.test.suite.rsmd.table.name.25=ALL_TYPES
 #
 hsqldb.test.suite.rsmd.autoincrement.1=true
 hsqldb.test.suite.rsmd.autoincrement.2=false
@@ -660,6 +687,8 @@ hsqldb.test.suite.rsmd.autoincrement.20=false
 hsqldb.test.suite.rsmd.autoincrement.21=false
 hsqldb.test.suite.rsmd.autoincrement.22=false
 hsqldb.test.suite.rsmd.autoincrement.23=false
+hsqldb.test.suite.rsmd.autoincrement.24=false
+hsqldb.test.suite.rsmd.autoincrement.25=false
 #
 hsqldb.test.suite.rsmd.case.sensitive.1=false
 hsqldb.test.suite.rsmd.case.sensitive.2=false
@@ -684,6 +713,8 @@ hsqldb.test.suite.rsmd.case.sensitive.20=true
 hsqldb.test.suite.rsmd.case.sensitive.21=false
 hsqldb.test.suite.rsmd.case.sensitive.22=true
 hsqldb.test.suite.rsmd.case.sensitive.23=false
+hsqldb.test.suite.rsmd.case.sensitive.24=false
+hsqldb.test.suite.rsmd.case.sensitive.25=false
 #
 hsqldb.test.suite.rsmd.currency.1=false
 hsqldb.test.suite.rsmd.currency.2=false
@@ -708,6 +739,8 @@ hsqldb.test.suite.rsmd.currency.20=false
 hsqldb.test.suite.rsmd.currency.21=false
 hsqldb.test.suite.rsmd.currency.22=false
 hsqldb.test.suite.rsmd.currency.23=false
+hsqldb.test.suite.rsmd.currency.24=false
+hsqldb.test.suite.rsmd.currency.25=false
 #
 hsqldb.test.suite.rsmd.nullable.1=java.sql.ResultSetMetaData.columnNoNulls
 hsqldb.test.suite.rsmd.nullable.2=java.sql.ResultSetMetaData.columnNullable
@@ -732,6 +765,8 @@ hsqldb.test.suite.rsmd.nullable.20=java.sql.ResultSetMetaData.columnNullable
 hsqldb.test.suite.rsmd.nullable.21=java.sql.ResultSetMetaData.columnNullable
 hsqldb.test.suite.rsmd.nullable.22=java.sql.ResultSetMetaData.columnNullable
 hsqldb.test.suite.rsmd.nullable.23=java.sql.ResultSetMetaData.columnNullable
+hsqldb.test.suite.rsmd.nullable.24=java.sql.ResultSetMetaData.columnNullable
+hsqldb.test.suite.rsmd.nullable.25=java.sql.ResultSetMetaData.columnNullable
 
 #
 hsqldb.test.suite.rsmd.read.only.1=false
@@ -757,6 +792,8 @@ hsqldb.test.suite.rsmd.read.only.20=false
 hsqldb.test.suite.rsmd.read.only.21=false
 hsqldb.test.suite.rsmd.read.only.22=false
 hsqldb.test.suite.rsmd.read.only.23=false
+hsqldb.test.suite.rsmd.read.only.24=false
+hsqldb.test.suite.rsmd.read.only.25=false
 #
 hsqldb.test.suite.rsmd.searchable.1=true
 hsqldb.test.suite.rsmd.searchable.2=true
@@ -781,6 +818,8 @@ hsqldb.test.suite.rsmd.searchable.20=true
 hsqldb.test.suite.rsmd.searchable.21=false
 hsqldb.test.suite.rsmd.searchable.22=false
 hsqldb.test.suite.rsmd.searchable.23=true
+hsqldb.test.suite.rsmd.searchable.24=true
+hsqldb.test.suite.rsmd.searchable.25=true
 #
 hsqldb.test.suite.rsmd.signed.1=true
 hsqldb.test.suite.rsmd.signed.2=true
@@ -805,6 +844,8 @@ hsqldb.test.suite.rsmd.signed.20=false
 hsqldb.test.suite.rsmd.signed.21=false
 hsqldb.test.suite.rsmd.signed.22=false
 hsqldb.test.suite.rsmd.signed.23=false
+hsqldb.test.suite.rsmd.signed.24=false
+hsqldb.test.suite.rsmd.signed.25=false
 
 #
 hsqldb.test.suite.rsmd.unwrap.iface.fqn=org.hsqldb.jdbc.JDBCResultSetMetaData
@@ -833,3 +874,5 @@ hsqldb.test.suite.rsmd.writable.20=false
 hsqldb.test.suite.rsmd.writable.21=false
 hsqldb.test.suite.rsmd.writable.22=false
 hsqldb.test.suite.rsmd.writable.23=false
+hsqldb.test.suite.rsmd.writable.24=false
+hsqldb.test.suite.rsmd.writable.25=false
