Make default global logging level more restrictive for performance reasons per suggestion by siggemannen.  No matches JDK global default.
git-svn-id: http://svn.code.sf.net/p/hsqldb/svn/base/trunk@6633 7c7dc5f5-a22d-0410-a3af-b41755a11667

--- a/src/org/hsqldb/resources/jdklogging-default.properties
+++ b/src/org/hsqldb/resources/jdklogging-default.properties
@@ -17,7 +17,7 @@
 # catalogs come online.
 
 handlers=java.util.logging.ConsoleHandler
-.level=ALL
+.level=INFO
 
 java.util.logging.ConsoleHandler.level=WARNING
 java.util.logging.ConsoleHandler.formatter=org.hsqldb.lib.BasicTextJdkLogFormatter
