--- a/trunk/src/org/hsqldb/resources/jdklogging-default.properties
+++ b/trunk/src/org/hsqldb/resources/jdklogging-default.properties
@@ -17,7 +17,7 @@
 # catalogs come online.
 
 handlers=java.util.logging.ConsoleHandler
-.level=ALL
+.level=INFO
 
 java.util.logging.ConsoleHandler.level=WARNING
 java.util.logging.ConsoleHandler.formatter=org.hsqldb.lib.BasicTextJdkLogFormatter
