--- a/trunk/src/org/hsqldb/resources/info-table-remarks.properties
+++ b/trunk/src/org/hsqldb/resources/info-table-remarks.properties
@@ -25,11 +25,12 @@ SYSTEM_TABLETYPES=the types of tables that can be created/found within this data
 SYSTEM_TEXTTABLES=the data source descriptors of the accessible TEXT TABLE objects defined within this database
 SYSTEM_TYPEINFO=a description of predefined table column data types known to this database
 SYSTEM_UDTS=the user-defined types that are available within this database
+SYSTEM_UDTATTRIBUTES=one row for each attribute of user-define types
 SYSTEM_USERS=users defined within this database
 SYSTEM_VERSIONCOLUMNS=the visible columns of the accessible tables that are automatically updated when any value in a row is updated
 ADMINISTRABLE_ROLE_AUTHORIZATIONS=one row for each role that can be granted
 APPLICABLE_ROLES=one row for each role granted to an authorization
-ASSERTIONS=
+ASSERTIONS=one row for each assertion
 AUTHORIZATIONS=one row for each user and one row for each role
 CHARACTER_SETS=one row for each character set name
 COLLATIONS=one row for each character collation descriptor.
@@ -46,11 +47,11 @@ CONSTRAINT_TABLE_USAGE=one row for each table identified by a <table name> simpl
 DATA_TYPE_PRIVILEGES=one row for each usage privilege granted on a user defined type
 DOMAINS=one row for each domain identified
 DOMAIN_CONSTRAINTS=one row for each check constraint included in a domain definition
-ELEMENT_TYPES=
-ENABLED_ROLES=
+ELEMENT_TYPES=one row for each array type in each table, domain, distinct type, or function return value 
+ENABLED_ROLES=one row for each role of the session user in the current session
 INFORMATION_SCHEMA_CATALOG_NAME=the catalog defined within this database
-JARS=
-JAR_JAR_USAGE=
+JARS=no data
+JAR_JAR_USAGE=no data
 KEY_COLUMN_USAGE=one row for each column used in s primary key or unique constraint
 KEY_PERIOD_USAGE=one row for each period used in s primary key or unique constraint
 PARAMETERS=one row for each routine parameter
@@ -64,7 +65,7 @@ ROLE_UDT_GRANTS=one row for each usage grant on a user defined type to a role
 ROLE_USAGE_GRANTS=one row for each usage grant to a role
 ROUTINES=one row for each routine
 ROUTINE_COLUMN_USAGE=one row for each table column usage in a routine
-ROUTINE_JAR_USAGE=
+ROUTINE_JAR_USAGE=one row for each SQL/JRT routine
 ROUTINE_PERIOD_USAGE=one row for each usage of a period in a routine
 ROUTINE_PRIVILEGES=one row for each usage privilege on a routine
 ROUTINE_ROUTINE_USAGE=one row for each usage of a routine in a routine
@@ -81,7 +82,7 @@ SQL_SIZING_PROFILES=list of supported SQL Standard packages
 TABLES=one row for each table or view
 TABLE_CONSTRAINTS=one row for each table constraint associated with a table
 TABLE_PRIVILEGES=the visible user level access permissions for each accessible table defined within this database
-TRANSLATIONS=
+TRANSLATIONS=one row for each translation of character sets
 TRIGGERED_UPDATE_COLUMNS=one row for each column in a foreign key cascade action
 TRIGGERS=one row for each trigger definition
 TRIGGER_COLUMN_USAGE=one row for each usage of a table column in a trigger definition
