--- a/trunk/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/trunk/src/org/hsqldb/resources/sql-state-messages.properties
@@ -332,6 +332,7 @@
 3472=22511 invalid function argument
 3473=22521 object serialization failure
 3474=22522 query execution reached limit of recursion
+3475=22523 unsupported format string
 
 # 04-PSM
 3488=2202A data exception: null value in field reference
