core code updates - TO_CHAR with numeric patterns
git-svn-id: http://svn.code.sf.net/p/hsqldb/svn/base/trunk@6744 7c7dc5f5-a22d-0410-a3af-b41755a11667

--- a/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/src/org/hsqldb/resources/sql-state-messages.properties
@@ -332,6 +332,7 @@
 3472=22511 invalid function argument
 3473=22521 object serialization failure
 3474=22522 query execution reached limit of recursion
+3475=22523 unsupported format string
 
 # 04-PSM
 3488=2202A data exception: null value in field reference
