core code updates - updatable result set enhancements
git-svn-id: http://svn.code.sf.net/p/hsqldb/svn/base/trunk@6776 7c7dc5f5-a22d-0410-a3af-b41755a11667

--- a/src/org/hsqldb/resources/sql-state-messages.properties
+++ b/src/org/hsqldb/resources/sql-state-messages.properties
@@ -6,7 +6,7 @@
 #
 # @author Campbell Burnet (campbell-burnet@users dot sourceforge.net)
 # @author Fred Toussi (fredt@users dot sourceforge.net)
-# @version 2.6.0
+# @version 2.7.4
 # @since 1.9.0
 #
 # do not translate this section
@@ -47,6 +47,8 @@
 0070=; ResultSet is empty
 0071=; ResultSet is positioned before first row
 0072=; ResultSet is positioned after last row
+0073=; ResultSet is positioned on insert row
+0074=; current row has been deleted
 
 # message parts
 0081=; in LIMIT, OFFSET or FETCH
