test code updates
git-svn-id: http://svn.code.sf.net/p/hsqldb/svn/base/trunk@6789 7c7dc5f5-a22d-0410-a3af-b41755a11667

--- a/test-src/org/hsqldb/resources/test.properties
+++ b/test-src/org/hsqldb/resources/test.properties
@@ -104,9 +104,9 @@ hsqldb.test.suite.dbmd.auto.commit.failure.closes.all.result.sets=false
 hsqldb.test.suite.dbmd.data.definition.causes.transaction.commit=true
 hsqldb.test.suite.dbmd.data.definition.ignored.in.transactions=false
 #
-hsqldb.test.suite.dbmd.deletes.are.detected.type.forward.only=false
-hsqldb.test.suite.dbmd.deletes.are.detected.type.scroll.insensitive=false
-hsqldb.test.suite.dbmd.deletes.are.detected.type.scroll.sensitive=false
+hsqldb.test.suite.dbmd.deletes.are.detected.type.forward.only=true
+hsqldb.test.suite.dbmd.deletes.are.detected.type.scroll.insensitive=true
+hsqldb.test.suite.dbmd.deletes.are.detected.type.scroll.sensitive=true
 #
 hsqldb.test.suite.dbmd.does.max.row.size.include.blobs=true
 #
@@ -116,14 +116,14 @@ hsqldb.test.suite.dbmd.catalog.term=CATALOG
 hsqldb.test.suite.dbmd.database.major.version=2
 hsqldb.test.suite.dbmd.database.minor.version=7
 hsqldb.test.suite.dbmd.database.product.name=HSQL Database Engine
-hsqldb.test.suite.dbmd.database.product.version=2.7.3
+hsqldb.test.suite.dbmd.database.product.version=2.7.4
 #
 hsqldb.test.suite.dbmd.default.transaction.isolation=2
 #Use this solely as the minimum version for Java 8 compatibility
 hsqldb.test.suite.dbmd.driver.major.version=2
 hsqldb.test.suite.dbmd.driver.minor.version=7
 hsqldb.test.suite.dbmd.driver.name=HSQL Database Engine Driver
-hsqldb.test.suite.dbmd.driver.version=2.7.3
+hsqldb.test.suite.dbmd.driver.version=2.7.4
 hsqldb.test.suite.driver.jdbc.compliant=true
 #
 hsqldb.test.suite.dbmd.extra.name.characters=
@@ -187,29 +187,29 @@ hsqldb.test.suite.dbmd.nulls.are.sorted.low=false
 
 # others deletes
 hsqldb.test.suite.dbmd.others.deletes.are.visible.type.forward.only=false
-hsqldb.test.suite.dbmd.others.deletes.are.visible.type.scroll.insensitive=false;
-hsqldb.test.suite.dbmd.others.deletes.are.visible.type.scroll.sensitive=false;
+hsqldb.test.suite.dbmd.others.deletes.are.visible.type.scroll.insensitive=false
+hsqldb.test.suite.dbmd.others.deletes.are.visible.type.scroll.sensitive=false
 # others inserts
 hsqldb.test.suite.dbmd.others.inserts.are.visible.type.forward.only=false
-hsqldb.test.suite.dbmd.others.inserts.are.visible.type.scroll.insensitive=false;
-hsqldb.test.suite.dbmd.others.inserts.are.visible.type.scroll.sensitive=false;
+hsqldb.test.suite.dbmd.others.inserts.are.visible.type.scroll.insensitive=false
+hsqldb.test.suite.dbmd.others.inserts.are.visible.type.scroll.sensitive=false
 # others updates
 hsqldb.test.suite.dbmd.others.updates.are.visible.type.forward.only=false
-hsqldb.test.suite.dbmd.others.updates.are.visible.type.scroll.insensitive=false;
-hsqldb.test.suite.dbmd.others.updates.are.visible.type.scroll.sensitive=false;
+hsqldb.test.suite.dbmd.others.updates.are.visible.type.scroll.insensitive=false
+hsqldb.test.suite.dbmd.others.updates.are.visible.type.scroll.sensitive=false
 
 # own deletes
-hsqldb.test.suite.dbmd.own.deletes.are.visible.type.forward.only=false
-hsqldb.test.suite.dbmd.own.deletes.are.visible.type.scroll.insensitive=false;
-hsqldb.test.suite.dbmd.own.deletes.are.visible.type.scroll.sensitive=false;
+hsqldb.test.suite.dbmd.own.deletes.are.visible.type.forward.only=true
+hsqldb.test.suite.dbmd.own.deletes.are.visible.type.scroll.insensitive=true
+hsqldb.test.suite.dbmd.own.deletes.are.visible.type.scroll.sensitive=true
 # own inserts
 hsqldb.test.suite.dbmd.own.inserts.are.visible.type.forward.only=false
-hsqldb.test.suite.dbmd.own.inserts.are.visible.type.scroll.insensitive=false;
-hsqldb.test.suite.dbmd.own.inserts.are.visible.type.scroll.sensitive=false;
+hsqldb.test.suite.dbmd.own.inserts.are.visible.type.scroll.insensitive=false
+hsqldb.test.suite.dbmd.own.inserts.are.visible.type.scroll.sensitive=false
 # own updates
-hsqldb.test.suite.dbmd.own.updates.are.visible.type.forward.only=false
-hsqldb.test.suite.dbmd.own.updates.are.visible.type.scroll.insensitive=false;
-hsqldb.test.suite.dbmd.own.updates.are.visible.type.scroll.sensitive=false;
+hsqldb.test.suite.dbmd.own.updates.are.visible.type.forward.only=true
+hsqldb.test.suite.dbmd.own.updates.are.visible.type.scroll.insensitive=true
+hsqldb.test.suite.dbmd.own.updates.are.visible.type.scroll.sensitive=true
 #
 hsqldb.test.suite.dbmd.stores.lower.case.identifiers=false
 hsqldb.test.suite.dbmd.stores.lower.case.quoted.identifiers=false
@@ -248,10 +248,10 @@ hsqldb.test.suite.dbmd.supports.different.table.correlation.names=false
 #
 hsqldb.test.suite.dbmd.supports.expressions.in.order.by=true
 # disabled for now
-hsqldb.test.suite.dbmd.supports.extended.sql.grammar=false;
+hsqldb.test.suite.dbmd.supports.extended.sql.grammar=true
 #
 hsqldb.test.suite.dbmd.supports.full.outer.joins=true
-# CHECKME - we have some support - not all? hence false?
+# we have more than full spec support
 hsqldb.test.suite.dbmd.supports.get.generated.keys=true
 #
 hsqldb.test.suite.dbmd.supports.group.by=true
@@ -335,9 +335,9 @@ hsqldb.test.suite.dbmd.supports.transactions=true
 hsqldb.test.suite.dbmd.supports.union=true
 hsqldb.test.suite.dbmd.supports.union.all=true
 #
-hsqldb.test.suite.dbmd.updates.are.detected.type.forward.only=false
-hsqldb.test.suite.dbmd.updates.are.detected.type.scroll.insensitive=false
-hsqldb.test.suite.dbmd.updates.are.detected.type.scroll.sensitive=false
+hsqldb.test.suite.dbmd.updates.are.detected.type.forward.only=true
+hsqldb.test.suite.dbmd.updates.are.detected.type.scroll.insensitive=true
+hsqldb.test.suite.dbmd.updates.are.detected.type.scroll.sensitive=true
 #
 hsqldb.test.suite.dbmd.uses.local.file.per.table=false
 hsqldb.test.suite.dbmd.uses.local.files=false
